<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/inc_toolbar_unsignedHome"
        layout="@layout/header_home"></include>

    <LinearLayout
        android:id="@+id/ll_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inc_toolbar_unsignedHome"
        android:background="@color/view_color"
        android:padding="8dp"
        android:weightSum="2"
        android:visibility="gone">

        <EditText
            android:id="@+id/ed_itemcat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/search_ed_corner"
            android:drawableRight="@drawable/search"
            android:layout_marginRight="10dp"
            android:hint="@string/item_category"
            android:inputType="text"
            android:padding="@dimen/et_padding"
            android:textSize="12sp"
            android:textCursorDrawable="@drawable/cursor_color_gray"
            android:layout_weight="1.2"/>


        <EditText
            android:id="@+id/ed_shoppingcenter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/search_ed_corner"
            android:drawableRight="@drawable/drop_down"
            android:clickable="false"
            android:focusable="false"
            android:hint="@string/shopping_center"
            android:inputType="text"
            android:padding="@dimen/et_padding"
            android:textSize="12sp"
            android:textCursorDrawable="@drawable/cursor_color_gray"
            android:layout_weight="0.8"/>
        <requestFocus />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/footer_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/view_color"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingTop="1dp"
        android:weightSum="5">

        <TextView
            android:id="@+id/tab_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/home_grey"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tab_favorites"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/fav_off"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/favorites"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tab_popular"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/popular"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/popular"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tab_map"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/map"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/map"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tab_closest"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/closest"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/closest"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/realtabcontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer_tabs"
        android:layout_below="@id/ll_category"
        android:background="@color/white1"></FrameLayout>

</RelativeLayout>