<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_popup"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_image"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gallery"
            android:id="@+id/btn_gallary"
            android:background="@drawable/rounded_button"
            android:textAllCaps="false"
            android:textColor="@color/white1"/>
        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:background="@color/white1">
        </View>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/camera"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white1"
            android:textAllCaps="false"
            android:id="@+id/btn_camera" />
    </LinearLayout>

</LinearLayout>